--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,11 @@ repositories {
 }
 
 dependencies {
-    compile 'com.google.guava:guava:14.0-rc2'
-    compile 'taglibs:standard:1.1.2'    
     providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
     testCompile 'junit:junit:4.11'
                    
  	def tomcatVersion = '7.0.35'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}"
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}", 'taglibs:standard:1.1.2'
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
     }    
