--- a/build.gradle
+++ b/build.gradle
@@ -11,18 +11,27 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'tomcat'
+apply plugin: 'maven'
+
+// for artifacts
+version = '1.0-SNAPSHOT'
+group = 'staticshared'
 
 sourceCompatibility = 1.6
+sourceSets {
+    // for CI to pass
+    test.output.resourcesDir = test.output.classesDir
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
     testCompile 'junit:junit:4.11', 'org.easymock:easymock:3.1'
-                   
- 	def tomcatVersion = '7.0.35'
+
+    def tomcatVersion = '7.0.35'
+    providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}", 'taglibs:standard:1.1.2'
     tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
        exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
@@ -34,7 +43,8 @@ eclipse {
 }
 
 task wrapper(type: Wrapper){
-	gradleVersion = '1.3'
+    gradleVersion = '1.3'
 }
 
+// for tomcat
 webAppDirName = 'src/test/webapp'
