--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'maven'
 // for artifacts
 version = '1.0-SNAPSHOT'
 group = 'staticshared'
+jar.baseName = 'staticshared'
 
 sourceCompatibility = 1.6
 sourceSets {
@@ -43,7 +44,7 @@ eclipse {
 }
 
 task wrapper(type: Wrapper){
-    gradleVersion = '1.3'
+    gradleVersion = '1.4'
 }
 
 // for tomcat
