--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,20 @@
-buildscript {
+allprojects {
+    apply plugin: 'java'
+    version = '1.0-SNAPSHOT'
+    group = 'staticshared'
+    sourceCompatibility = 1.6
+
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.6'
-    }
 }
 
-apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'tomcat'
 apply plugin: 'maven'
 
-// for artifacts
-version = '1.0-SNAPSHOT'
-group = 'staticshared'
+// for maven artifacts
 jar.baseName = 'staticshared'
 
-sourceCompatibility = 1.6
 sourceSets {
     // for CI to pass
     test.output.resourcesDir = test.output.classesDir
@@ -30,13 +26,7 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.11', 'org.easymock:easymock:3.1'
-
-    def tomcatVersion = '7.0.35'
-    providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}", 'taglibs:standard:1.1.2'
-    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
-       exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
-    }    
+    compile "javax.servlet:servlet-api:2.5"
 }
 
 eclipse {
@@ -47,5 +37,3 @@ task wrapper(type: Wrapper){
     gradleVersion = '1.4'
 }
 
-// for tomcat
-webAppDirName = 'src/test/webapp'
