--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     testCompile 'junit:junit:4.11', 'org.easymock:easymock:3.1'
-    compile "javax.servlet:servlet-api:2.5"
+    compile 'javax.servlet:servlet-api:2.5'
 }
 
 eclipse {
@@ -37,3 +37,24 @@ task wrapper(type: Wrapper){
     gradleVersion = '1.4'
 }
 
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            name 'staticshared'
+            url 'https://github.com/tksmd/static-shared'
+            description 'Servlet concatinating static resources'
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+            scm {
+                url 'https://github.com/tksmd/static-shared'
+                connection 'scm:git:https://github.com/tksmd/static-shared.git'
+                developerConnection 'scm:git:https://github.com/tksmd/static-shared.git'
+            }
+        }
+    }
+}
