配布用に groupId などを変更

--- a/example/src/main/webapp/WEB-INF/web.xml
+++ b/example/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<servlet>
 		<servlet-name>staticshared</servlet-name>
-		<servlet-class>staticshared.SharedServlet</servlet-class>
+		<servlet-class>com.isenshi.staticshared.SharedServlet</servlet-class>
 		<init-param>
 			<param-name>base</param-name>
 			<param-value></param-value>
