--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 allprojects {
     apply plugin: 'java'
     version = '1.0-SNAPSHOT'
-    group = 'staticshared'
+    group = 'com.isenshi'
     sourceCompatibility = 1.6
 
     repositories {
@@ -11,6 +11,7 @@ allprojects {
 
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
 // for maven artifacts
 jar.baseName = 'staticshared'
@@ -71,4 +72,8 @@ install {
             }
         }
     }
+}
+
+signing {
+    sign configurations.archives
 }
