--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,16 @@ task mappings {
     conf2ScopeMappings.addMapping(0, configurations.provided, conf2ScopeMappings.PROVIDED)  
 }
 
+task sourcesJar(type: Jar, dependsOn:classes) { 
+     classifier = 'sources' 
+     from sourceSets.main.allSource 
+} 
+
+task javadocJar(type: Jar, dependsOn:javadoc) { 
+     classifier = 'javadoc' 
+     from javadoc.destinationDir 
+} 
+
 install {
     repositories.mavenInstaller {
         pom.project {
@@ -70,9 +80,25 @@ install {
                 connection 'scm:git:https://github.com/tksmd/static-shared.git'
                 developerConnection 'scm:git:https://github.com/tksmd/static-shared.git'
             }
+            developers {
+                developer {
+                    id 'tksmd'
+                    name 'SOMEDA Takashi'
+                    email 'someda@isenshi.com'
+                    roles {
+                        role 'developer'
+                    }
+                    timezone '+9'
+                } 
+            }
         }
     }
 }
+
+artifacts { 
+     archives sourcesJar 
+     archives javadocJar 
+} 
 
 signing {
     sign configurations.archives
