--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,26 +1,20 @@
 buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.6'
-    }
+	repositories { mavenCentral() }
+	dependencies { classpath 'org.gradle.api.plugins:gradle-tomcat-plugin:0.9.6' }
 }
 
 apply plugin: 'tomcat'
 
-// for tomcat
-//webAppDirName = 'src/test/webapp'
-
 dependencies {
-    compile project(':')
+	// depends on parent project
+	compile project(':')
 
-    def tomcatVersion = '7.0.35'
-    providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}", 'taglibs:standard:1.1.2'
-    tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
-       exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
-    }
+	def tomcatVersion = '7.0.35'
+	providedCompile 'javax.servlet:servlet-api:2.5', 'javax.servlet:jsp-api:2.0', 'javax.servlet:jstl:1.2'
+	tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}", "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}", 'taglibs:standard:1.1.2'
+	tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
+		exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
+	}
 }
 
 
